[gd_scene load_steps=17 format=3 uid="uid://hb7isw645t1t"]

[ext_resource type="Script" path="res://Scripts/Enemy/Bosses/Boss.gd" id="1_75vd1"]
[ext_resource type="Shader" path="res://Assets/Shaders/Defensive.gdshader" id="2_up4e3"]
[ext_resource type="Texture2D" uid="uid://cj2ojgayqchbs" path="res://Assets/Characters/Boss-sprite.png" id="3_bqlqv"]
[ext_resource type="Script" path="res://Scripts/States/StateMachine.gd" id="4_xfywl"]
[ext_resource type="Script" path="res://Scripts/States/Bosses/BossIdle.gd" id="5_0jjpp"]
[ext_resource type="Script" path="res://Scripts/States/Bosses/BossAttack.gd" id="6_tdji2"]
[ext_resource type="Script" path="res://Scripts/Stats/HealthComponent.gd" id="7_bjisq"]
[ext_resource type="Script" path="res://Scripts/Stats/ColorComponent.gd" id="8_spaym"]
[ext_resource type="PackedScene" uid="uid://c5thomb4wodpp" path="res://Scenes/ObjectHealthBar.tscn" id="9_8u8i2"]

[sub_resource type="ShaderMaterial" id="ShaderMaterial_eib4j"]
shader = ExtResource("2_up4e3")
shader_parameter/line_color = Color(0.439216, 0.945098, 0.239216, 1)
shader_parameter/min_thickness = 0.0
shader_parameter/max_thickness = 1.0
shader_parameter/line_thickness = 1.0

[sub_resource type="AtlasTexture" id="AtlasTexture_uca5l"]
atlas = ExtResource("3_bqlqv")
region = Rect2(0, 0, 72, 72)

[sub_resource type="AtlasTexture" id="AtlasTexture_be32c"]
atlas = ExtResource("3_bqlqv")
region = Rect2(72, 0, 72, 72)

[sub_resource type="AtlasTexture" id="AtlasTexture_h27w4"]
atlas = ExtResource("3_bqlqv")
region = Rect2(144, 0, 72, 72)

[sub_resource type="SpriteFrames" id="SpriteFrames_kic57"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_uca5l")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_be32c")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_h27w4")
}],
"loop": true,
"name": &"Idle",
"speed": 3.0
}]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_u2k8g"]
size = Vector2(59, 72)

[sub_resource type="CircleShape2D" id="CircleShape2D_o6uk4"]
radius = 175.071

[node name="Boss" type="CharacterBody2D"]
collision_layer = 2
collision_mask = 13
script = ExtResource("1_75vd1")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
material = SubResource("ShaderMaterial_eib4j")
sprite_frames = SubResource("SpriteFrames_kic57")
animation = &"Idle"
frame_progress = 0.49984

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(-1.5, 0)
shape = SubResource("RectangleShape2D_u2k8g")

[node name="Area2D" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
shape = SubResource("CircleShape2D_o6uk4")
one_way_collision_margin = 0.0

[node name="StateMachine" type="Node" parent="." node_paths=PackedStringArray("initialState")]
script = ExtResource("4_xfywl")
initialState = NodePath("Attack")

[node name="Idle" type="Node" parent="StateMachine" node_paths=PackedStringArray("enemy", "animate")]
script = ExtResource("5_0jjpp")
enemy = NodePath("../..")
animate = NodePath("../../AnimatedSprite2D")

[node name="Attack" type="Node" parent="StateMachine" node_paths=PackedStringArray("enemy", "animate")]
script = ExtResource("6_tdji2")
enemy = NodePath("../..")
animate = NodePath("../../AnimatedSprite2D")

[node name="AttackCooldown" type="Timer" parent="StateMachine/Attack"]
wait_time = 2.0

[node name="HealthComponent" type="Node" parent="."]
script = ExtResource("7_bjisq")
MAX_HEALTH = 500.0

[node name="ColorComponent" type="Node" parent="."]
script = ExtResource("8_spaym")

[node name="Gun" type="Node2D" parent="."]

[node name="Aiming" type="Marker2D" parent="Gun"]
position = Vector2(15, 0)

[node name="HealthBar" parent="." node_paths=PackedStringArray("healthComponent") instance=ExtResource("9_8u8i2")]
anchors_preset = 0
anchor_right = 0.0
anchor_bottom = 0.0
offset_left = -33.0
offset_top = -48.0
offset_right = -33.0
offset_bottom = -48.0
grow_horizontal = 1
grow_vertical = 1
scale = Vector2(0.4, 0.4)
healthComponent = NodePath("../HealthComponent")
metadata/_edit_use_anchors_ = true

[connection signal="timeout" from="StateMachine/Attack/AttackCooldown" to="StateMachine/Attack" method="_on_attack_cooldown_timeout"]
